--- a/siteUrna/index.html
+++ b/siteUrna/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urna Eletrônica 2022 versão 1.0</title>
+    <link rel="stylesheet" href="/Aparencia/estilo.css">
 </head>
 <body>
     
